# picod-aa

./: .gitignore
picod-aa/: pyproject.toml
picod_aa/: __init__.py  pyproject.toml
test/: test1.py
