[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "picod_aa"
version = "0.0.1-Alpha"
dependencies = [
  "pyserial"
]
requires-python  = ">= 3.11"
license = {file = "LICENSE"}

authors = [
  {name = "joan", email = "joan@abyz.me.uk"},
  {name = "Paweł Szolczewski", email = "pawelsz818@gmail.com"},
]
maintainers = [
  {name = "Paweł Szolczewski", email = "pawelsz818@gmail.com"},
]